--- a/test.html
+++ b/test.html
@@ -5,8 +5,8 @@
     <title>Test</title>
 </head>
 <body>
-    <script>
-        document.write("<p>This is inserted.</p>");
-    </script>
+    <div id="testdiv">
+    </div>
+    <script src="static/script/example.js"></script>
 </body>
 </html>
