--- a/explanation.html
+++ b/explanation.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen" href="static/style/typography.css" />
     <title>Explaining the Document Object Model</title>
+    <link rel="stylesheet" media="screen" href="static/style/typography.css" />
 </head>
 <body>
     <h1>What is the Document Object Model?</h1>
@@ -18,6 +18,10 @@
         and scripts to dynamically acess and update the content, structure and style of documents.
     </p>
     </blockquote>
+    <p>
+        It is an <abbr title="Application Programming Interface">API</abbr>
+        that can be used to navigate <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="eXtensible Markup Language">XML</abbr> documents.
+    </p>
     <script src="static/script/addLoadEvent.js"></script>
     <script src="static/script/displayAbbreviations.js"></script>
 </body>
